--- a/Pipfile
+++ b/Pipfile
@@ -5,6 +5,7 @@ verify_ssl = true
 
 [scripts]
 webapp = "python run.py"
+request = "python request.py"
 
 [dev-packages]
 
@@ -14,6 +15,7 @@ flask-sqlalchemy = "*"
 eventlet = "*"
 flask-socketio = "*"
 flask-restful = "*"
+requests = "*"
 
 [requires]
 python_version = "3.6"
