Add npm run build-production
- `npm run build`: Invokes webpack in development mode, with --watch
- `npm run build-production`: Builds in production mode

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "webpack.config.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "babel-node ./node_modules/webpack/bin/webpack"
+    "build": "babel-node ./node_modules/webpack/bin/webpack --watch",
+    "build-production": "babel-node ./node_modules/webpack/bin/webpack --mode=\"production\""
   },
   "author": "",
   "license": "ISC",
